# starterkit-rust

./: Cargo.toml  README.md
app/: main.rs
